--- a/LavaCar.Web.Mvc/LavaCar.Web.Mvc.csproj
+++ b/LavaCar.Web.Mvc/LavaCar.Web.Mvc.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="bootstrap" Version="4.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\User\" />
+  </ItemGroup>
+
 
 
 </Project>
